# honeycomb

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.db  reference_models.py  requirements.txt
app/: database.py  main.py  models.py  seed.py
app/migrations/: env.py
app/migrations/versions/: 21d84a221886_test_migration.py  7e36bc59a4a5_initial_migration.py
app/routers/: apartments.py
backend/: .gitignore  Makefile  data_models.py
backend/app/: main.py  models.py
backend/data/: sample.json
data/: sample.json
frontend/honeycomb/honeycomb/: package-lock.json  package.json
frontend/honeycomb/honeycomb/src/: App.css  App.jsx  index.css
frontend/honeycomb/honeycomb/src/components/: Favorites.jsx  FilterOptions.css  FilterOptions.jsx  Layout.jsx  LikesInterests.jsx  ProfileDetails.jsx  PropertyDetails.jsx  PropertyListing.css  PropertyListing.jsx
frontend/honeycomb/honeycomb/src/store/: filterSlice.js  listingStore.js  propertyStore.js  store.js
frontend/src/: main.jsx
frontend/src/components/: BottomNavigation.jsx  LikesInterests.jsx  PropertyDetails.jsx  PropertyListing.jsx
frontend/src/store/: filterSlice.js  listingStore.js
honeycomb_processing/: .gitignore  pyproject.toml
honeycomb_processing/data/: properties3.db
honeycomb_processing/data/json/: merged.json  processed_descriptions.json  processed_image_2.json  sample.json
honeycomb_processing/src/: const.py  data_models.py  extraction_chain.py  image_data_extraction.py  merge_data.py  model.py
