[project]
name = "honeycomb-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerard",email = "g.cervantest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "langchain-openai (==0.3.12)",
    "langsmith (>=0.3.37,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
